# vacop_system

./: .gitignore  .gitignore.save  .gitignore.save.1  Dockerfile.mapping  Dockerfile.vision  README.md  audit_thresholds.py  compose.yaml  manuel.txt  monitor_perf.py  package.xml  setup.cfg  setup.py
TEST_VIDEO/: export_models.py  run_trt_demo.py
lidar/src/rslidar_sdk/config/: config.yaml
lidar/src/rslidar_sdk/launch/: start.py
models/: traffic_classifier.pth
src/lidar/rslidar_sdk/config/: config.yaml
src/lidar_ground_filter/: CMakeLists.txt  README.md  package.xml
src/lidar_ground_filter/launch/: ground_filter.launch.py  ground_filter_bis.launch.py
src/lidar_ground_filter/src/: euclidean_cluster_node.cpp  ransac_ground_filter_node.cpp
src/vacop_mapping/: CMakeLists.txt
src/vacop_mapping/launch/: rtabmap_lidar_launch.py  rtabmap_lidar_launch_icp_imu_gnss.py  rtabmap_lidar_launch_icp_imu_gnss_referencer.py
src/vacop_vision/: .gitignore  README.md  audit_thresholds.py  setup.py.save
src/vacop_vision/vacop_vision/vision/: .run.py.swp  view_cam.py.save  vision_node.py  vision_node.py.save  vision_node_mqtt.py
tools/calibration/: calib_cam.py  calib_lidar_camera.py  readme.md
tools/calibration/calib_parameters/lidar_to_camera/: extrinsics_lidar_to_camera.json  extrinsics_lidar_to_camera.yaml
tools/calibration/dataset_calib_lidar_cam/: calibration.yml
tools/calibration/dataset_calib_lidar_cam/pointclouds/: 0001.asc  0002.asc  0003.asc  0004.asc  0005.asc  0006.asc  0007.asc  0008.asc  0009.asc  0010.asc  0011.asc  0012.asc  0013.asc  0014.asc  0015.asc  0016.asc  0017.asc
tools/classifier/: train_classifier.py
vacop_mapping/: package.xml
vacop_system/vision/: run.py  view_cam.py  vision_node.py
vacop_vision/: README.md  package.xml  requirements.txt  setup.cfg
vision/: export_models.py  run.py
